tests/run/error_arity.out
tests/run/error_arity.em:3:27: error: wrong number of arguments to function
